syntax = "proto3";

package com.example;

service PredictionService {
  rpc ImagePrediction (ImageData) returns (CategoricalResult);
}

message ImageData {
  bytes data = 1;
  int32 width = 2;
  int32 height = 3;
  int32 channel = 4;
}

message TextData { 
  repeated string data = 1;
}

message CategoricalResult {
  repeated float result = 1;
}

message GeneratedTextResult {
  repeated string result = 1;
}

message GeneratedImageResult {
  string result = 1;
}